2007-05-16 [iwkse]	0.4.0cvs4

	* src/poppler_viewer.c
			Fix few leaks

2007-05-16 [iwkse]	0.4.0cvs3

	* src/poppler_viewer.h
	* src/poppler_viewer.c
			Add a Tooltip for icon_type

2007-05-16 [iwkse]	0.4.0cvs2

	* src/poppler_viewer.h
	* src/poppler_viewer.c
			Add a 'grab with mouse' scrolling.
			Thanks to Colin

2007-05-14 [colin]	0.4.0cvs1

	* src/poppler_viewer.c
		Add page switching when scrolling with the
		mouse wheel. Also, change the gs call to
		convert PS to PDF to match the one called
		by ps2pdf.

2007-04-16 [paul]	0.4.0

	0.4.0 released

2007-04-18 [iwkse]	0.3.0cvs1

	* src/poppler_viewer.c
		Fix not showing images on gtk+ 2.6.x
		Thanks to wwp, colin

2007-04-16 [paul]	0.3.0

	0.3.0 released

2007-04-16 [paul]	0.2.0cvs70

	* configure.ac
	* po/ca.po
	* po/es.po
	* po/hu.po
	* po/pt_BR.po
	* po/sr.po
		updated translations by Miquel Oliete, Ricardo
		Mones Lastra, Pader Rezso, and Frederico Goncalves
		Guimaraes.
		added Serbian translation by Aleksandar Urosevic

2007-04-04 [iwkse]	0.2.0cvs69

	* src/poppler_viewer.c
			Fix search on pdf with 1 page

2007-04-03 [iwkse]	0.2.0cvs68

	* src/poppler_viewer.c
			Better formatting.

2007-04-03 [iwkse]	0.2.0cvs67

	* src/poppler_viewer.c
			Handle a new index type(POPPLER_DEST_FITH)

2007-03-28 [colin]	0.2.0cvs66

	* configure.ac
		Require poppler 0.4.2, it's enough :)

2007-03-28 [paul]	0.2.0cvs65

	* src/poppler_viewer.c
		add tooltips to spinners

2007-03-26 [colin]	0.2.0cvs64

	* src/poppler_viewer.c
		Fix wrong parameter to render_selection,
		set zoom step to 0.2 to fit GtkSpinButton's
		one decimal better (fixes double rendering 
		on Gtk 2.8)

2007-03-26 [iwkse]	0.2.0cvs63

	* src/poppler_viewer.c
			fixed zoom_fit

2007-03-26 [iwkse]	0.2.0cvs62

	* src/poppler_viewer.c
	* src/poppler_viewer.h
			Add a spin for zooming

2007-03-26 [iwkse]	0.2.0cvs61

	* src/poppler_viewer.c
			*fixed double update call

2007-03-25 [colin]	0.2.0cvs60

	* src/Makefile.am
		Fix dist

2007-03-25 [iwkse]	0.2.0cvs59
